# swagger/default.yaml
@@ -3,8 +3,88 @@ info:
   title: TLU
   description: ""
   version: "1.0.0"
+servers:
+  - url: localhost:3000/api/v1
+security:
+  - bearerAuth: []
+
 paths:
-  /api/v1/login:
+
+  
+
+  /items/{itemId}:
+   get:
+      operationId: getItem
+      summary: Returns an item object
+      parameters:
+         - $ref: "#/components/parameters/itemIdParam"
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Item"
+        403:
+          description: Forbidden
+        500:
+          description: Error
+
+  /users/{userId}:
+    get:
+      operationId: getUser
+      summary: Returns an user object
+      security:
+        - bearerAuth: []
+      parameters:
+         - $ref: "#/components/parameters/userIdParam"
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/User"
+        403:
+          description: Forbidden
+        500:
+          description: Error
+
+  /users/{userId}/cart/{itemId}:
+    put:
+      operationId: addItemToCart
+      summary: Adds an item to the cart
+      security:
+        - bearerAuth: []
+      parameters:
+        - $ref: "#/components/parameters/userIdParam"
+        - $ref: "#/components/parameters/itemIdParam"
+      responses:
+        200:
+          description: OK
+        403:
+          description: Forbidden
+        500:
+          description: err
+
+
+    delete:
+      operationId: removeItemFromCart
+      summary: Removes an item from the cart
+      security:
+        - bearerAuth: []
+      parameters:
+        - $ref: "#/components/parameters/userIdParam"
+        - $ref: "#/components/parameters/itemIdParam"
+      responses:
+        200:
+          description: OK
+        403:
+          description: Forbidden
+        500:
+          description: err
+
+  /login:
     post:
       operationId: login
       summary: User signs in
@@ -43,7 +123,7 @@ paths:
           description: bad email or password
         401:
           description: unauthorized
-  /api/v1/signup:
+  /signup:
     post:
       operationId: signup
       summary: User signs up
@@ -66,3 +146,50 @@ paths:
           description: bad email or password
         401:
           description: unauthorized
+components:
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
+  schemas:
+    Item:
+      type: object
+      properties:
+        _id:
+          type: string
+        createdAt:
+          type: string
+        price:
+          type: string
+        title:
+          type: string
+
+
+    User:
+      type: object
+      properties:
+        _id:
+          type: string
+        createdAt:
+          type: string
+        cart:
+          type: array
+          items:
+            type: string
+        email:
+          type: string
+  parameters:
+    userIdParam:
+      in: path
+      name: userId
+      schema:
+        type: string
+      required:  true
+
+    itemIdParam:
+      in: path
+      name: itemId
+      schema:
+        type: string
+      required: true
